2006-11-07  Thomas Wood  <thos@gnome.org>

	* engines/crux/src/crux-draw.c: (paint_scrollbar_trough): Improve
	scollbar trough sharpness
	* themes/Redmond/gtk-2.0/gtkrc: Set some "Redmond" style icon sizes

2006-11-05  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_set_widget_parameters):
	* engines/clearlooks/src/support.c: (clearlooks_get_parent_bg):
	- correctly fallback to the current style if it is not possible to
	retrieve the parents bg.

	* engines/mist/src/mist-style.c: (mist_style_draw_shadow_gap):
	* engines/redmond/src/redmond_gtk2_drawing.c:
	(redmond_draw_extension):
	- added missing cairo_destroy

	* engines/thinice/src/thinice_misc.c: (thinice_draw_separator):
	* engines/thinice/src/thinice_misc.h:
	* engines/thinice/src/thinice_theme_draw.c:
	(thinice_style_draw_hline), (thinice_style_draw_vline),
	(thinice_style_draw_box):
	Fix bug #364750:
	- Draw lines with the correct length
	- Use the dark/light colors from the style

2006-11-03  Andrew Johnson  <acjgenius@earthlink.net>
	* engines/redmond/src/redmond_gtk2_drawing.c:
		- Fix background fill for redmond scales
		
	* engines/smooth/src/engine/shared/gtk/smooth_gtk_drawing.c:
	* engines/smooth/src/engine/smooth_gtk2_drawing.c:
		- Smooth Fix for bug 352602
		
2006-11-03  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/mist/src/mist-style.c: (mist_style_draw_shadow):
	- Just return for shadow_type == NONE. Fixes bug #366716 (John Cupitt)

	* engines/mist/src/mist-style.c: (mist_style_draw_check):
	- Use the passed in style instead of widget->style. Fixes a possible
	  crasher.
	- Clip the gc correctly.

2006-11-03  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/redmond/src/redmond_gtk2_drawing.c:
	(redmond_draw_combobox_button), (redmond_draw_handle):
	- Fix some broken parent accesses.

2006-11-03  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/glide/src/glide_gtk2_drawing.c:
	(glide_draw_combobox_button):